# github-analytics

./: .gitignore  .travis.yml  README.md  deploy.sh  index.html  package.json  prebuild.sh  setupTest.js
.github/: dependabot.yml
aggregator/: README.md  config.py  fetch.sh  fetch_coverage_running_time.py  fetch_job_runs.py  fetch_running_time.py  fetch_workflow_runs.py  github_client.py  plot.py  plot.sh  pyproject.toml  pytest.ini  run.sh
aggregator/docs/: README.md
aggregator/src/: config.py
aggregator/src/application/: job_run.py  running_time_run.py  workflow_run.py
aggregator/src/repositories/: data_points_repository.py  job_repository.py  workflow_repository.py
aggregator/tests/: test_fetch_workfow_run.py
aggregator/tests/integration/: test_job_repostiory.py
aggregator/tests/integration/fixtures/double/: job_example_1.json  job_example_2.json
css/: app.7167712d.css  app.8d6f7c73.css  app.eb87f0c9.css
js/: about.0184d40f.js  about.0184d40f.js.map  about.5ffa2420.js  about.5ffa2420.js.map  app-legacy.29e06775.js  app-legacy.29e06775.js.map  app-legacy.31b77631.js  app-legacy.31b77631.js.map  app-legacy.840c4a2c.js  app-legacy.840c4a2c.js.map  app-legacy.8cef7ac6.js  app-legacy.8cef7ac6.js.map  app-legacy.bc61dd6b.js  app-legacy.bc61dd6b.js.map  app-legacy.c4a4c33a.js  app-legacy.c4a4c33a.js.map  app-legacy.e1717916.js  app-legacy.e1717916.js.map  app-legacy.e75f3754.js  app-legacy.e75f3754.js.map  app-legacy.febab4b9.js  app-legacy.febab4b9.js.map  app.03e7a0c8.js  app.03e7a0c8.js.map  app.09976931.js  app.09976931.js.map  app.0ccda998.js  (+217 more)
(+55 files in other folders)
